[gd_scene load_steps=13 format=3 uid="uid://dchh0lbx2nv0i"]

[ext_resource type="Shader" uid="uid://bfdt70142kbuu" path="res://assets/shaders/crt.gdshader" id="1_yue2c"]
[ext_resource type="Script" uid="uid://bjil0jn1x81tq" path="res://assets/scripts/leftText.gd" id="2_hicdd"]
[ext_resource type="Script" uid="uid://erpa4kkck1th" path="res://assets/scripts/rightText.gd" id="3_js2is"]
[ext_resource type="Texture2D" uid="uid://bundvbql5wtjt" path="res://assets/images/textIcon.png" id="4_hxddd"]
[ext_resource type="Script" uid="uid://di8f3tfp33ul7" path="res://assets/scripts/leftTextEdit.gd" id="4_js2is"]
[ext_resource type="AudioStream" uid="uid://bs5awluohtf23" path="res://assets/sounds/068363_label-printer-38061.mp3" id="6_ms0es"]
[ext_resource type="AudioStream" uid="uid://crpbbjkx4i8i3" path="res://assets/sounds/key.wav" id="7_unajf"]
[ext_resource type="AudioStream" uid="uid://btbblrham774d" path="res://assets/sounds/unknown_command.wav" id="8_o3bw6"]
[ext_resource type="AudioStream" uid="uid://d3c5bh3bu5ljg" path="res://assets/sounds/known_command.wav" id="9_y7wxu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1wybe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hicdd"]
shader = ExtResource("1_yue2c")
shader_parameter/resolution = Vector2(640, 360)
shader_parameter/scan_line_amount = 1.0
shader_parameter/warp_amount = 0.1
shader_parameter/noise_amount = 0.03
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -8.0
shader_parameter/pixel_strength = -2.0

[sub_resource type="QuadMesh" id="QuadMesh_js2is"]
size = Vector2(1280, 720)

[node name="Earth Defence Force Terminal" type="Node2D"]
material = SubResource("ShaderMaterial_1wybe")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="CRT" type="MeshInstance2D" parent="Camera2D/CanvasLayer"]
material = SubResource("ShaderMaterial_hicdd")
position = Vector2(640, 360)
mesh = SubResource("QuadMesh_js2is")

[node name="BG" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Left" type="RichTextLabel" parent="."]
offset_right = 640.0
offset_bottom = 640.0
theme_override_colors/default_color = Color(0, 1, 0, 1)
bbcode_enabled = true
text = "Earth Defence Force Terminal"
scroll_following = true
script = ExtResource("2_hicdd")

[node name="Right" type="RichTextLabel" parent="."]
offset_left = 640.0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_colors/default_color = Color(0, 1, 0, 1)
bbcode_enabled = true
script = ExtResource("3_js2is")

[node name="LineEdit" type="LineEdit" parent="."]
offset_top = 656.0
offset_right = 320.0
offset_bottom = 688.0
scale = Vector2(2, 2)
theme_override_colors/selection_color = Color(0, 1, 0, 1)
theme_override_colors/caret_color = Color(0, 1, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 1, 0, 1)
theme_override_colors/font_color = Color(0, 1, 0, 1)
placeholder_text = "Commands go here"
emoji_menu_enabled = false
right_icon = ExtResource("4_hxddd")
caret_blink = true
script = ExtResource("4_js2is")
login_disabled = null

[node name="RightTypin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ms0es")

[node name="LeftType" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_unajf")

[node name="UnknownCmd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_o3bw6")

[node name="KnownCmd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_y7wxu")

[connection signal="text_submitted" from="LineEdit" to="LineEdit" method="_on_text_submitted"]
